[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://autoload/ResolutionDebugger.gd" type="Script" id=2]
[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=3]

[node name="ResolutionDebugger" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0470588, 0.207843, 0.92549 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_top = 153.0
margin_right = 640.0
margin_bottom = 174.0
text = "Screen Resolution:"
align = 1
valign = 1
clip_text = true

[node name="ScreenResolution" type="Label" parent="Control/VBoxContainer"]
margin_top = 178.0
margin_right = 640.0
margin_bottom = 208.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1280 x 720"
align = 1
valign = 1
clip_text = true

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
margin_top = 212.0
margin_right = 640.0
margin_bottom = 233.0
text = "Window Resolution:"
align = 1
valign = 1
clip_text = true

[node name="WindowResolution" type="Label" parent="Control/VBoxContainer"]
margin_top = 237.0
margin_right = 640.0
margin_bottom = 267.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "640 x 360"
align = 1
valign = 1
clip_text = true

[node name="Label3" type="Label" parent="Control/VBoxContainer"]
margin_top = 271.0
margin_right = 640.0
margin_bottom = 292.0
text = "Pixel Size:"
align = 1
valign = 1
clip_text = true

[node name="PixelSize" type="Label" parent="Control/VBoxContainer"]
margin_top = 296.0
margin_right = 640.0
margin_bottom = 326.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 1
valign = 1
clip_text = true
